--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>My Personal Blog</title>
 
   <!--
     - favicon
@@ -136,7 +136,7 @@
           </li>
           <li class="social-item">
             <a href="https://github.com/CerberusTR" class="social-link">
-              <i class="fa fa-github" aria-hidden="true"></i>
+              <i class="bi bi-github"></i>
               
             </a>
           </li>
@@ -198,12 +198,19 @@
 
         <section class="about-text">
           <p>
-            Şuan ki kariyer hedefim yazılım geliştirme uzmanı olmak . Bu
-            hedefimdeki adımım Bilge Adam firmasında yazılım eğitimi almaktı.Şuan
-            eğitim sürecim devam ediyor.Aldığım eğitim içeri .NET Full Stack
-            Developer eğitimidir.Kenimi geliştirmeyi ve yeni teknolojilerle
-            çalışmaya açık bir insanım . Takım çalışmasına yatkın ve uyumlu
-            biriyim.
+            Lisans eğitimimi inşaat mühendisliği alanında yaptıktan sonra bir
+            kariyer değişikliğine giderek yazılım alanında kendimi
+            geliştirmeye ve bu alanda ilerlemeye karar verdim. En büyük
+            hedefim ise başarılı bir yazılım geliştirme uzmanı olarak kariyer
+            hayatında ilerlemek. Bu hedefimdeki ilk adımıma Bilge Adam
+            kurumunda yazılım programında eğitim alarak başladım. Şuan bu
+            alanda online eğitimler alarak çeşitli yazılım süreçlerinde
+            kendimi geliştirmekteyim. Aldığım programın içeriği “NET Full
+            Stack Developer” eğitimidir. Her zaman kendimi geliştirmeye ve
+            yeni teknolojileri takip ederek çalışmaya açık bir insanım. Takım
+            çalışmasına yatkın ve uyumlu yapımında bana birçok konuda katkı
+            sağlayacağını düşünüyorum. Uygun pozisyonlar için sizlerle
+            görüşmeyi umuyorum.
           </p>
         </section>
 
@@ -268,21 +275,7 @@
 
             </li>
 
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Windows Programming Development</h4>
-
-                <p class="service-item-text">
-                  Windows uygulamaları geliştirme
-                </p>
-              </div>
-
-            </li>
+           
 
           </ul>
 
